/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.MarketParticipant.Integration.Model.Protobuf";
import "google/protobuf/timestamp.proto";
import "Protobuf/ActorNumberType.proto";

// An integration event raised when a new actor is created.
message ActorCreatedIntegrationEventContract {
  // The id of the integration event. Is a GUID.
  string Id = 1;
  // The id of the actor. Is a GUID.
  string ActorId = 2;
  // The id of the organization. Is a GUID.
  string OrganizationId = 3;
  // The identificaton number of the actor, for example GLN.
  string ActorNumber = 4;
  // Always 1.
  int32 Status = 5;
  // The business role codes assigned to the actor. See BusinessRoleCode.cs.
  repeated int32 BusinessRoles = 6;
  // The EIC market role functions given to the actor.   
  // For a list of possible values, see EicFunction.cs.
  repeated ActorMarketRoleEventData ActorMarketRoles = 7;
  // The creation time of the integration event.
  google.protobuf.Timestamp EventCreated = 8;
  // The type of the current event: ActorCreatedIntegrationEvent.
  string Type = 9;
  // The name of the actor.
  string Name = 10;
  // Specifies the type of the ActorNumber field.
  ActorNumberType ActorNumberType = 11;
}

message ActorMarketRoleEventData {
  int32 Function = 1;
  repeated ActorGridAreaEventData GridAreas = 2;
}

message ActorGridAreaEventData {
  string Id = 1;
  repeated string MeteringPointTypes = 2;
}